--- a/package.json
+++ b/package.json
@@ -22,6 +22,21 @@
     "json5": "0.4.0",
     "os-homedir": "1.0.2"
   },
+  "devDependencies": {
+    "@types/node": "^7.0.8",
+    "coffee-script": ">=1.7.0",
+    "cson": "^3.0.1",
+    "hjson": "^1.2.0",
+    "js-yaml": "^3.2.2",
+    "properties": "~1.2.1",
+    "semver": "5.3.0",
+    "toml": "^2.0.6",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.4.2",
+    "underscore": "^1.8.3",
+    "vows": ">=0.8.1",
+    "x2js": "^2.0.1"
+  },
   "repository": {
     "type": "git",
     "url": "http://github.com/lorenwest/node-config.git"
